--- a/html/header.html
+++ b/html/header.html
@@ -133,11 +133,14 @@
             const backgroundColor = ["Bisque", "Aqua", "BurlyWood", "CornflowerBlue", "DarkKhaki",
                 "DeepSkyBlue", "Khaki", "Lavender", "LightSkyBlue", "MediumAquaMarine"];
             const histogramId = 'histogram' + count;
-            const personHtml = person + ' - ' + data.total +
-                '<button ' +
+            let personHtml = person + ' - ' + data.total;
+            if (location.protocol === 'https:' || window.location.hostname.toString() === 'localhost') {
+                personHtml = personHtml +
+                    '<button ' +
                     'id="'+ person + '_button" ' +
-                    'onclick="follow_or_unfollow(\''+ person + '\')">' +
-                '</button>';
+                    'onclick="follow_or_unfollow(\''+ person + '\')"> ' +
+                    '</button>foo';
+            }
             dom.innerHTML +=
                 '<div class="person">' +
                     '<div class="person_name">' + personHtml + '</div>' +
@@ -167,6 +170,7 @@
         function loadData() {
             getJSON('./ajax',
                 function(err, results) {
+                    let count;
                     if (err === null) {
                         const people = document.getElementById('people');
                         const date = document.getElementById('date');
@@ -176,7 +180,7 @@
                         people.innerHTML = '';
                         people.classList.remove("sk-pulse");
                         count = 0;
-                        for(const person in results.people){
+                        for (const person in results.people) {
                             const data = results.people[person];
                             outputPerson(person, data, count, people);
                             count++;
